src/main/java/org/example/springjpaalena/error/InvalidSizeException.java
package org.example.springjpaalena.error;

public class InvalidSizeException extends RuntimeException {
    public InvalidSizeException(String message) {
        super(message);
    }
}
